resolved css issue where tiles are not formatting properly on smaller monitors

--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,12 +1,12 @@
 
   .word-container{
     margin: auto;
-    width: 800px;
+    width: 900px;
   }
 
   .alphabet-container {
     margin: auto;
-    width: 1744px;
+    width: 1353px;
   }
 
   .button-container{
@@ -41,7 +41,6 @@
     vertical-align: middle;
     white-space: nowrap;
     word-wrap: break-word;
-    
   }
   
   .button:hover {
@@ -76,10 +75,9 @@
   }
   
   .letter-box {
-    height: 67px;
+    height: 52px;
     margin: auto;
     border: solid 1px #ccc;
-    min-height: 60px;
     background: white;
     border-radius: 4px;
     overflow: hidden;
@@ -90,8 +88,8 @@
   .letter-tiles {
     margin: auto;
     padding: 10px 10px;
-    width: 45px;
-    height: 45px;
+    width: 30px;
+    height: 30px;
     border: solid 1px #ccc;
     color: rgba(0, 0, 0, 0.87);
     display: inline-flex;
